<resources>
    <string name="app_name">Practica2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="administracion">Administración</string>
    <string name="perfil">Perfil</string>
    <string name="user_example_com">user@example.com</string>
    <string name="configuraci_n">Configuración</string>
    <string name="inicio">Inicio</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_tienes_cuenta_reg_strate">¿No tienes cuenta? Regístrate</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="ya_tienes_una_cuenta_iniciar_sesi_n">¿Ya tienes una cuenta? Iniciar sesión</string>
<<<<<<< HEAD
    <string name="imagen_de_perfil_del_usuario">Imagen de perfil del usuario</string>
=======
>>>>>>> 56d9615d32097a07c51d0e697c2172a2e8e7781e
</resources>